--- a/sggayung.html
+++ b/sggayung.html
@@ -70,25 +70,24 @@
             const estateData = {
                 "id": "sggayung",
                 "name": "Ladang Sungai Gayung",
-                "reportInfo": "Data based on Plantation Advisory Report 2/2025 (Visit: 13th Nov 2025) & Agronomy Report 1/2025 (Visit: 30 June 2025).",
+                "reportInfo": "Data based on Plantation Advisory Report 2/2025 (Visit: 13th Nov 2025) & Agronomy Report 2/2025 (Visit: 20th Nov 2025).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Estate Area",
                         "lines": [
                             "Total Planted: 2,314.30 ha",
-                            "Mature: 1,551.80 ha",
-                            "Immature: 527.30 ha",
+                            "Mature: 1,576.90 ha",
+                            "Immature: 502.20 ha",
                             "Replanting: 235.20 ha"
                         ],
-                        "note": "(PAR Pg. 10)"
+                        "note": "(AR Pg. 9)"
                     },
                     "yield": {
-                        "title": "Yield/Ha vs Budget (YTD Oct)",
+                        "title": "Yield/Ha (YTD Oct)",
                         "lines": [
                             "Actual: 14.98 MT/Ha",
-                            "Budget: 14.79 MT/Ha"
                         ],
-                        "note": "Higher than budget (PAR Pg. 28)"
+                        "note": "Higher than budget (PAR); -9% vs 2024 (AR Pg. 45)"
                     },
                     "cost": {
                         "title": "Cost/Tonne vs Budget (YTD Oct)",
@@ -100,44 +99,44 @@
                     },
                     "pruning": {
                         "title": "Pruning Quality",
-                        "value": "Delayed / Unsatisfactory",
-                        "note": "Progressive pruning delayed (PAR Pg. 5)"
+                        "value": "94% Complete / Stacking Issues",
+                        "note": "Frond stacking in ravines needs improvement (AR Pg. 25)"
                     },
                      "pests": {
                         "title": "Pest Status",
                         "value": "Under Control",
-                        "note": "Rat baiting in P20A/B (PAR Pg. 20)"
+                        "note": "Rat baiting in P20A/B (PAR Pg. 20; AR Pg. 21)"
                     }
                 },
                 "keyMetrics": [
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Ratio", "value": "1 : 14 ha" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Controlled" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "Harvester Productivity", "value": "2.25 MT/day" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m-1 4h1m6-4h1m-1-4h1m-1 4h1m-1-4h1' /></svg>", "label": "Ganoderma", "value": "Census Required" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-red-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m-1 4h1m6-4h1m-1-4h1m-1 4h1' /></svg>", "label": "Ganoderma", "value": "Localized / Census Required" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "15 days" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z' /></svg>", "label": "Palm Density", "value": "133 palms/ha" }
                 ],
                 "chartData": {
                     "production": {
                         "labels": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct"],
-                        "ffb": [2500, 2200, 2600, 2800, 2000, 0, 0, 0, 0, 0], // Note: Monthly production data not explicitly provided in PAR 2/2025 text, retaining placeholder or YTD context.
-                        "rainfall": [240, 37, 193, 316, 157.5, 83.5, 64, 92, 265.5, 114.5],
-                        "note": "*2025 Rainfall (Jan-Oct) from PAR 2/2025 Appendix 5. FFB data reflects YTD trends."
+                        "ffb": [0, 0, 0, 0, 0, 0, 0, 0, 0, 0], // Note: AR 2/2025 does not provide monthly FFB breakdown.
+                        "rainfall": [233, 301, 585, 1043, 237, 203, 42, 192, 193, 241],
+                        "note": "*2025 Rainfall (Jan-Oct) from AR 2/2025 Appendix 2. FFB monthly data not available."
                     },
                     "ageProfile": {
-                        "labels": ["Immature (<3Y)", "Young Mature (4-8Y)", "Old Mature (>19Y)", "Replanting"],
-                        "data": [22.78, 14.02, 52.75, 10.16],
+                        "labels": ["Immature", "Young Mature", "Old Mature", "Replanting"],
+                        "data": [21.7, 15.1, 53.0, 10.2],
                         "title": "Ladang Sungai Gayung - Palm Age Profile (2025)",
-                        "note": "*Source: PAR 2/2025, Pg. 11 & 10."
+                        "note": "*Source: AR 2/2025, Pg. 9 Table 1 & 2."
                     }
                 },
                 "observations": [
-                    "<b>Pruning Delays:</b> Progressive pruning is delayed and unsatisfactory. Caution needed to avoid over-pruning in young mature areas and Ganoderma-infested tall palms. <span class='observation-ref'>(PAR Pg. 5, 24)</span>",
-                    "<b>Road Maintenance:</b> Road grading completed, but erosion in hilly areas needs repair to prevent landslides. Regular checks required during rain. <span class='observation-ref'>(PAR Pg. 5, 22)</span>",
-                    "<b>Weed Control:</b> Generally satisfactory, but interrow weeding standard needs improvement. Noxious weeds (VOPs) need complete eradication. <span class='observation-ref'>(PAR Pg. 4, 17; AR Pg. 5)</span>",
-                    "<b>Ganoderma & Palm Health:</b> Ganoderma is a growing concern in older blocks. Mounding has been stopped; census and sanitation (de-boling) are prioritised. <span class='observation-ref'>(PAR Pg. 21; AR Pg. 12)</span>",
-                    "<b>Immature Area Progress:</b> P22C (scout harvesting started), P23D (ablation done), and P24E (planting complete) are progressing well. Weeding in P22C needs improvement. <span class='observation-ref'>(PAR Pg. 7, 31-35)</span>",
-                    "<b>Crop Performance:</b> FFB production is satisfactory (10% above budget YTD Oct). Yield per hectare stands at 14.98 MT. <span class='observation-ref'>(PAR Pg. 28)</span>"
+                    "<b>Pruning Standards:</b> Progressive pruning is 94% complete, but frond stacking in ravine areas is untidy ('U' shape) and requires improvement. Slight over-pruning noted in young mature areas (P20A/B). <span class='observation-ref'>(AR Pg. 23, 25, 32; PAR Pg. 5)</span>",
+                    "<b>Ganoderma Threat:</b> High concern in older blocks. Mounding has been stopped; the estate is advised to conduct a full census to determine the extent of infection as none has been done recently. <span class='observation-ref'>(AR Pg. 20; PAR Pg. 21)</span>",
+                    "<b>Weed Control:</b> Generally acceptable, but slightly behind schedule (2 rounds completed, 3rd in progress). VOPs and broadleaf weeds in interrows need eradication. <span class='observation-ref'>(AR Pg. 27, 35)</span>",
+                    "<b>Nutrient Deficiency:</b> Magnesium deficiency symptoms observed in immature block P22C and terrace areas, likely due to nutrient leaching. <span class='observation-ref'>(AR Pg. 37-38)</span>",
+                    "<b>Replanting Progress:</b> P25F (235.2 ha) planting is 96% complete. EFB mulching (2-3 rings) and Mucuna planting are in progress and acceptable. <span class='observation-ref'>(AR Pg. 43-44)</span>",
+                    "<b>Crop Performance:</b> YTD Oct yield is 14.98 MT/Ha, which is 9% lower than 2024. However, young mature blocks (P20A/B) showed significant improvement (+26% to +44%). <span class='observation-ref'>(AR Pg. 45; PAR Pg. 28)</span>"
                 ],
                 "reports": {
                     "plantation": {
@@ -161,12 +160,13 @@
                         "Vehicles & Machinery": "Running costs for Hilux, John Deere, Timac, and Higer Ace are below budget. Electric Ginga running cost is RM 4.56/hr (Budget RM 2.31/hr) - requires monitoring. <span class='observation-ref'>(PAR Pg. 39)</span>"
                     },
                     "agronomy": {
-                        "Executive Summary": "The estate's manuring program is mostly on schedule. Weed control is satisfactory and has improved. Pests remain under control. However, over-pruning in the 2020 plantings still needs correction. The low palm density (128/ha) and increasing Ganoderma threat are key limiting factors. <span class='observation-ref'>(AR Pg. 4-6)</span>",
-                        "Nutrient Inputs/Progress of Manuring": "The 2024 manuring program was 100% completed. The 2025 program is on schedule as of May, with only minor delays. EFB has been applied to mulch immature palms in PR23D and PR24E. <span class='observation-ref'>(AR Pg. 15-18)</span>",
-                        "Agronomic Observation": "Crop recovery is satisfactory with minimal field losses. Pruning in tall palms is satisfactory, but over-pruning persists in P20A/B. Weed control is good, but some untidy interrows with VOPs were noted. Rat damage is below the 10% threshold. Ganoderma is a growing concern. <span class='observation-ref'>(AR Pg. 19-42)</span>",
-                        "Young Mature/Immature Agronomy": "Young mature areas (P20A/B) suffer from high mortality in flood-prone zones and over-pruning. Immature areas (PR22C, 23D, 24E) show varied palm vigor depending on leguminous cover and face challenges with pest damage (Rhinoceros beetle) and inconsistent upkeep. <span class='observation-ref'>(AR Pg. 43-66)</span>",
-                        "Yield Performance": "2024 yield recovered to 18.87 MT/ha, a 30% increase from 2023. As of May 2025, YPH is 6.74, slightly ahead of 2024's 6.40 YPH for the same period. A drop in average bunch weight in older blocks is a concern, likely linked to Ganoderma. <span class='observation-ref'>(AR Pg. 67-73)</span>",
-                        "Fertilizer Recommendation": "The 2025 fertilizer program is confirmed with no changes. For new plantings, 600g of controlled-release fertilizer and 500g of Rock Phosphate in the planting hole is recommended. <span class='observation-ref'>(AR Pg. 74)</span>"
+                        "Executive Summary": "The age profile is not ideal with >50% old palms. Yield YTD is 9% lower than 2024. Manuring progress is acceptable. Pruning needs improvement in stacking and avoiding over-pruning. Ganoderma is a key issue. Replanting in P25F is 96% complete. <span class='observation-ref'>(AR Pg. 4-7)</span>",
+                        "Nutrient Inputs/Progress of Manuring": "NK2 program completed in mature areas. Minor delays (1 month) for Mix B and Compound in immature areas due to delivery issues. EFB mulching completed in P23D/P24E (15 mt/ha) and progressing in P25F. <span class='observation-ref'>(AR Pg. 14-17)</span>",
+                        "Agronomic Observation (Mature)": "Harvesting intervals (15 days) maintained. Rat infestation under control (<10%). Pruning is 94% complete, but frond stacking in ravines needs improvement. No recent Ganoderma census has been conducted despite localized infection. <span class='observation-ref'>(AR Pg. 18-29)</span>",
+                        "Agronomic Observation (Immature/Young Mature)": "Young Mature (P20A/B): Harvesting acceptable, but slight over-pruning observed. Immature (P22C): Magnesium deficiency noted due to leaching. Weeding in P20 is slightly behind schedule. Pests are under control. <span class='observation-ref'>(AR Pg. 30-42)</span>",
+                        "Replanting 2025 (P25F)": "Planting is 96.73% complete (9,788 palms). EFB mulching (2-3 rings) and Mucuna planting are in progress and acceptable. Terraces constructed in undulating areas. <span class='observation-ref'>(AR Pg. 43-44)</span>",
+                        "Yield Performance": "YTD Oct 2025 yield is 14.98 MT/ha, a 9% decline from 2024 (16.36 MT/ha). Old mature blocks declined (7-13%), while young mature P20A/B improved significantly (+26-44%). Average Bunch Weight increased by 4% overall. <span class='observation-ref'>(AR Pg. 45-47)</span>",
+                        "Fertilizer Recommendation": "2026 program formulated. Mixture fertilizers recommended for mature/young mature. Compound A for immature. Kieserite for Mg deficiency in lateritic areas. Blocks for 2026/2027 replanting excluded. <span class='observation-ref'>(AR Pg. 48)</span>"
                     },
                     "pinfosys": "Not Available"
                 },
